Fixed Slider Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700');
 
 body {font-family: 'Lato', sans-serif; padding-top: 80px;}
-a {
-    text-decoration: none;
-    color: #d2b598;  }
+a {text-decoration: none; color: #d2b598;}
 * {margin: 0; padding: 0;}
 .inner-wrapper {display: block; width: 100%; max-width: 1280px; margin: 0 auto;}
 .inner-wrapper.content {margin: 60px auto;}
@@ -45,7 +43,7 @@ header.shrinked {height: 60px;}
 header.shrinked nav > ul > li {height: 60px; line-height: 60px;}
 
 /** Slider **/
-#main-slider {width: 100%; height: 500px; position: relative;}
+#main-slider {width: 100%; height: 500px; position: relative; overflow: hidden;}
 #main-slider ul {margin: 0; padding: 0; ist-style: none; position: absolute; width: 300%; height: 100%; top: 0;}
 #main-slider li {padding: 0; margin: 0; width: 33.333333%; height: 100%; position: absolute; top: 0; bottom: 0; border: none; background-size: cover; background-repeat: none; background-position: center top;}
 #main-slider .slide-nav {position: absolute; display: block; top: 50%; transform: translate(0, -50%); color: #FFF; margin: 0; padding: 0; opacity: 0; z-index: 2; font-size: 36px; cursor: pointer;}
